src/test/ui/lifetime-errors/ex1-return-one-existing-name-if-else-3.stderr
error[E0621]: explicit lifetime required in parameter type
  --> $DIR/ex1-return-one-existing-name-if-else-3.rs:12:27
   |
11 | fn foo<'a>((x, y): (&'a i32, &i32)) -> &'a i32 {
   |            ------ consider changing type to `(&'a i32, &'a i32)`
12 |     if x > y { x } else { y } //~ ERROR explicit lifetime
   |                           ^ lifetime `'a` required

error: aborting due to previous error

